[project]
name = "langgraph-exam"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "langchain==0.3.20",
    "langchain-core==0.3.41",
    "langchain-openai==0.3.7",
    "langgraph==0.3.5",
    "langsmith==0.3.11",
    "openai==1.65.2",
    "python-dotenv>=1.2.1",
    "requests==2.32.4",
    "typing-extensions==4.13.2",
]
